; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_message.c_verbose_leave_scroll.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_message.c_verbose_leave_scroll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@p_vfile = common dso_local global i64* null, align 8
@NUL = common dso_local global i64 0, align 8
@msg_silent = common dso_local global i64 0, align 8
@msg_row = common dso_local global i32 0, align 4
@cmdline_row = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @verbose_leave_scroll() #0 {
  %1 = load i64*, i64** @p_vfile, align 8
  %2 = load i64, i64* %1, align 8
  %3 = load i64, i64* @NUL, align 8
  %4 = icmp ne i64 %2, %3
  br i1 %4, label %5, label %11

5:                                                ; preds = %0
  %6 = load i64, i64* @msg_silent, align 8
  %7 = add nsw i64 %6, -1
  store i64 %7, i64* @msg_silent, align 8
  %8 = icmp slt i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %5
  store i64 0, i64* @msg_silent, align 8
  br label %10

10:                                               ; preds = %9, %5
  br label %13

11:                                               ; preds = %0
  %12 = load i32, i32* @msg_row, align 4
  store i32 %12, i32* @cmdline_row, align 4
  br label %13

13:                                               ; preds = %11, %10
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
